--- a/.gitignore
+++ b/.gitignore
@@ -3,21 +3,23 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
 # Build output
-node_modules
 dist
 dist-ssr
+
+# Dependencies
+node_modules
+server/node_modules
 
 # Local environment files
 .env
 .env.local
 .env.*.local
 
-# Editor directories and files
+# Editor
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -32,18 +34,3 @@ Thumbs.db
 # Test output
 coverage
 *.lcov
-node_modules
-dist
-.env
-
-node_modules/
-.dist/
-dist/
-.env
-node_modules/
-.dist/
-dist/
-.env
-node_modules/
-dist/
-.env
