--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:server\"",
-  "dev:frontend": "vite",
-  "dev:server": "node ./src/server/server.js",
-  "build": "vite build",
-  "preview": "vite preview",
-  "lint": "eslint .",
-  "test": "vitest run",
-  "test:watch": "vitest"
-},
+  "scripts": {
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:server\"",
+    "dev:frontend": "vite",
+    "dev:server": "node ./server/server.js",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest"
+  },
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "lodash.debounce": "^4.0.8",
     "md5": "^2.3.0",
     "react": "^18.3.1",
